--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,11 +2,11 @@
 
 client_id = "b403c2e13733c9e3135f9d0e5a41f716"
 name = "hop"
-application_url ="https://register-sen-mac-groundwater.trycloudflare.com/"
-embedded = true
+application_url ="https://republican-cubic-joyce-roommate.trycloudflare.com/"
+embedded = true 
 
 [build]
-automatically_update_urls_on_dev = false
+automatically_update_urls_on_dev = true
 include_config_on_deploy = true
 
 [webhooks]
