--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,15 +2,18 @@
 
 client_id = "b403c2e13733c9e3135f9d0e5a41f716"
 name = "hop"
-application_url ="https://republican-cubic-joyce-roommate.trycloudflare.com/"
-embedded = true 
+application_url = "https://instagramfeed-jz6z.onrender.com"
+embedded = true
 
 [build]
-automatically_update_urls_on_dev = true
-include_config_on_deploy = true
+automatically_update_urls_on_dev = false
 
 [webhooks]
 api_version = "2026-01"
+
+  [[webhooks.subscriptions]]
+  uri = "/webhooks"
+  compliance_topics = [ "customers/data_request", "customers/redact", "shop/redact" ]
 
   [[webhooks.subscriptions]]
   topics = [ "app/uninstalled" ]
@@ -20,13 +23,11 @@ api_version = "2026-01"
   topics = [ "app/scopes_update" ]
   uri = "/webhooks/app/scopes_update"
 
-  [[webhooks.subscriptions]]
-  compliance_topics = [ "customers/data_request", "customers/redact", "shop/redact" ]
-  uri = "/webhooks"
+
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products"
+scopes = "write_products,read_orders"
 
 [auth]
-redirect_urls = [ "https://schemes-adelaide-vinyl-sept.trycloudflare.com/api/auth" ]
+redirect_urls = [ "https://instagramfeed-jz6z.onrender.com/api/auth" ]
