--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -12,22 +12,20 @@ automatically_update_urls_on_dev = false
 api_version = "2026-01"
 
   [[webhooks.subscriptions]]
-  uri = "/webhooks"
-  compliance_topics = [ "customers/data_request", "customers/redact", "shop/redact" ]
-
-  [[webhooks.subscriptions]]
   topics = [ "app/uninstalled" ]
   uri = "/webhooks/app/uninstalled"
+
+  [[webhooks.subscriptions]]
+  uri = "/webhooks"
+  compliance_topics = [ "customers/data_request", "customers/redact", "shop/redact" ]
 
   [[webhooks.subscriptions]]
   topics = [ "app/scopes_update" ]
   uri = "/webhooks/app/scopes_update"
 
-
-
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products,read_orders"
+scopes = "read_orders,write_products"
 
 [auth]
 redirect_urls = [ "https://instagramfeed-jz6z.onrender.com/api/auth" ]
